--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <button class="button">Follow for more updates</button>
           <button class="button" onclick="matfun()">Materials</button>
           <button class="button">Exam Cell News</button>
+           <button class="button" onclick="matfun()">Examcell news</button>
         </div>
     </div>
 
